package sits.server;

public enum TournamentStatus {
    REGISTERING,
    RUNNING,
    COMPLETED
}
