package sits.viewer;

public class LobbyController {

    private ServerConnection connection;

    public void init(ServerConnection connection) {
        this.connection = connection;
    }
}
